# Whispers

./: CMakeLists.txt  main.cpp
Models/Classroom/: classroom.cpp  classroom.h
Models/Student/: student.cpp  student.h
Windows/AuthDialog/: authdialog.cpp  authdialog.h  authdialog.ui  ui_authdialog.h
Windows/GridWidget/: gridwidget.cpp  gridwidget.h  gridwidget.ui  ui_gridwidget.h
Windows/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Windows/swapDialog/: swapdialog.cpp  swapdialog.h  swapdialog.ui  ui_swapdialog.h
utils/: Const.h  FactorTypes.h  Pos.h
